[package]
name = "cew"
version = "0.5.1"
edition = "2021"
description = "Personal Rust utility library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Koranir/cew"
keywords = ["utility", "simple", "logging"]
categories = ["rust-patterns"]

[dependencies]
color-eyre = { version = "0.6.2", default-features = false, optional = true }

[profile.dev.package.backtrace]
opt-level = 3

[features]
default = ["color-eyre", "track-caller", "capture-spantrace", "block-on", "piping"]
track-caller = ["color-eyre?/track-caller"]
capture-spantrace = ["color-eyre?/capture-spantrace"]
issue-url = ["color-eyre?/issue-url"]
block-on = []
piping = []
