[package]
name = "cew"
version = "0.10.2"
edition = "2021"
description = "Personal Rust utility library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Koranir/cew"
keywords = ["utility", "simple", "logging"]
categories = ["rust-patterns"]

[dependencies]
snafu = { version = "0.9.0", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }

[features]
default = ["piping", "tracing", "snafu"]
piping = []
tracing = ["dep:tracing", "tracing-subscriber"]
snafu = ["dep:snafu"]
